# testWebServer

./: .gitignore  CMakeLists.txt
html/: index.html  info.html  settings.html
src/: FileHandler.cpp  FileHandler.h  IndexHandler.cpp  IndexHandler.h  InfoHandler.cpp  InfoHandler.h  SettingsHandler.cpp  SettingsHandler.h  main.cpp
